--- a/Frontend/charts/src/index.css
+++ b/Frontend/charts/src/index.css
@@ -1,8 +1,21 @@
 #map {
+    cursor: crosshair;
+    z-index: 1;
     width: 1920;
     height: 1080;
 }
 
+.map-container {
+    z-index: 1;
+    cursor: crosshair;
+}
+
 .tooltip {
-    
+    background-color: black;
+    color: white;
+    position: absolute;
+    border: 1px solid black;
+    z-index: 10;
+    display: none;
+    padding: 2px;;
 }
