--- a/Frontend/charts/src/index.css
+++ b/Frontend/charts/src/index.css
@@ -148,6 +148,7 @@ body::-webkit-scrollbar {
     color: white;
     padding: 1%;
     width: 100%;
+    min-height: 100px;
     background-color: #283655;
     text-align: center;
     top: 0px;
