--- a/Frontend/charts/src/index.css
+++ b/Frontend/charts/src/index.css
@@ -1,5 +1,36 @@
+/* GENERAL */
+
 body {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+.main-content {
+    text-align: center;
+    margin-top: 8%;
+    width: 100%;
+}
+
+/* GENERAL END */
+
+
+
+/* HEADER */
+
+.header {
+    position: fixed;
+    color: white;
+    padding: 1%;
+    width: 100%;
+    background-color: #283655;
+    text-align: center;
+    top: 0px;
+    font-weight: bolder;
+    font-size: 60px;
+    z-index: 1000 !important;
 }
 
 #github-link-logo {
@@ -16,109 +47,32 @@ body {
     transform: scale(1.1)
 }
 
-
-
-
-/* Footer */
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
-section {
-    padding: 60px 0;
-}
-.container {
-    text-align: center;
-}
-
-section .section-title {
-    text-align: center;
-    color: #007b5e;
-    margin-bottom: 50px;
-    text-transform: uppercase;
-}
-#footer {
-    color: #ffffff;
-    margin-top: 5%;
-    background: #283655  !important;
-}
-#footer h5{
-	padding-left: 10px;
-    border-left: 3px solid #eeeeee;
-    padding-bottom: 6px;
-    margin-bottom: 20px;
-    color:#ffffff;
-}
-#footer a {
-    color: #ffffff;
-    text-decoration: none !important;
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects;
-}
-#footer ul.social li{
-	padding: 3px 0;
-}
-#footer ul.social li a i {
-    margin-right: 5px;
-	font-size:25px;
-	-webkit-transition: .5s all ease;
-	-moz-transition: .5s all ease;
-	transition: .5s all ease;
-}
-#footer ul.social li:hover a i {
-	font-size:30px;
-	margin-top:-10px;
-}
-#footer ul.social li a,
-#footer ul.quick-links li a{
-	color:#ffffff;
-}
-#footer ul.social li a:hover{
-	color:#eeeeee;
-}
-#footer ul.quick-links li{
-	padding: 3px 0;
-	-webkit-transition: .5s all ease;
-	-moz-transition: .5s all ease;
-	transition: .5s all ease;
-}
-#footer ul.quick-links li:hover{
-	padding: 3px 0;
-	margin-left:5px;
-	font-weight:700;
-}
-#footer ul.quick-links li a i{
-	margin-right: 5px;
-}
-#footer ul.quick-links li:hover a i {
-    font-weight: 700;
-}
-
-@media (max-width:767px){
-	#footer h5 {
-    padding-left: 0;
-    border-left: transparent;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
-}
-}
+/* HEADER END */
 
 
 
 
-.map{
+/* INTRODUCTION */
+
+.page-intro {
+    font-size: 29px;
+    padding: 2%;
+}
+
+#page-intro-right {
+    border-right: 1px solid #283655;
+}
+
+/* INTRODUCTION END */
+
+
+
+
+
+/* MAPS */
+
+.map {
     border: 2px solid black;
-}
-
-.material-icons.md-36 {
-    font-size: 36px;
-}
-
-body::-webkit-scrollbar {
-    display: none;
-  }
-
-.main-content {
-    margin-top: 8%;
-    text-align: center;
-    width: 100%;
 }
 
 #heat-map {
@@ -129,7 +83,6 @@ body::-webkit-scrollbar {
 #choro-map {
     cursor: crosshair;
 }
-
 
 .tooltip {
     background-color: rgba(0, 0, 0, 0.5);
@@ -142,47 +95,57 @@ body::-webkit-scrollbar {
     padding: 5px 8px 5px 8px;
 }
 
-.header {
-    position: fixed;
-    color: white;
-    padding: 1%;
-    width: 100%;
-    background-color: #283655;
+#maps-charts-container {
     text-align: center;
-    top: 0px;
-    font-weight: bolder;
-    font-size: 60px;
-    z-index: 1000 !important;
 }
 
 .map-information {
-    font-size:29px;
-    display: inline-block;
-    margin: 0px;
+    text-align: center;
+    font-size: 29px;
     padding: 2%;
-    word-wrap: normal;
-    max-width: 600px;
 }
 
 .map-container {
-    display: inline-block;
-    margin-left: 25%;
-    margin-top: 5%;
+    margin-top: 6%;
 }
 
+/* MAPS END */
 
-.map-play-wrapper {
-    position: relative;
+
+
+
+
+
+
+/* CHARTS */
+
+.charts-container{
+    margin-top: 8%;
 }
+
+/* CHARTS END */
+
+
+
+
+
+
+
+/* BUTTONS */
+
+.material-icons.md-36 {
+    font-size: 36px;
+}
+
 
 .btnPlay {
     bottom: 48%;
-    left: 48%;  
+    left: 48%;
 }
 
 .btnStop {
     bottom: 0;
-    right: 0;  
+    right: 0;
     display: none;
 }
 
@@ -200,6 +163,11 @@ body::-webkit-scrollbar {
     z-index: 10;
 }
 
+.map-play-wrapper {
+    display: inline-block;
+    position: relative;
+}
+
 .map-button:hover {
     transform: scale(1.2);
     cursor: pointer;
@@ -214,3 +182,110 @@ body::-webkit-scrollbar {
     background-color: green;
 }
 
+/* BUTTONS END */
+
+
+
+
+
+
+
+
+/* FOOTER  */
+
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+
+section {
+    padding: 60px 0;
+}
+
+.container {
+    text-align: center;
+}
+
+section .section-title {
+    text-align: center;
+    color: #007b5e;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+#footer {
+    color: #ffffff;
+    margin-top: 5%;
+    background: #283655 !important;
+}
+
+#footer h5 {
+    padding-left: 10px;
+    border-left: 3px solid #eeeeee;
+    padding-bottom: 6px;
+    margin-bottom: 20px;
+    color: #ffffff;
+}
+
+#footer a {
+    color: #ffffff;
+    text-decoration: none !important;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+}
+
+#footer ul.social li {
+    padding: 3px 0;
+}
+
+#footer ul.social li a i {
+    margin-right: 5px;
+    font-size: 25px;
+    -webkit-transition: .5s all ease;
+    -moz-transition: .5s all ease;
+    transition: .5s all ease;
+}
+
+#footer ul.social li:hover a i {
+    font-size: 30px;
+    margin-top: -10px;
+}
+
+#footer ul.social li a,
+#footer ul.quick-links li a {
+    color: #ffffff;
+}
+
+#footer ul.social li a:hover {
+    color: #eeeeee;
+}
+
+#footer ul.quick-links li {
+    padding: 3px 0;
+    -webkit-transition: .5s all ease;
+    -moz-transition: .5s all ease;
+    transition: .5s all ease;
+}
+
+#footer ul.quick-links li:hover {
+    padding: 3px 0;
+    margin-left: 5px;
+    font-weight: 700;
+}
+
+#footer ul.quick-links li a i {
+    margin-right: 5px;
+}
+
+#footer ul.quick-links li:hover a i {
+    font-weight: 700;
+}
+
+@media (max-width:767px) {
+    #footer h5 {
+        padding-left: 0;
+        border-left: transparent;
+        padding-bottom: 0px;
+        margin-bottom: 10px;
+    }
+}
+
+
+/* FOOTER END */
