--- a/Frontend/charts/src/index.css
+++ b/Frontend/charts/src/index.css
@@ -4,6 +4,9 @@ body {
     padding: 0%; 
     font-family: Arial, Helvetica, sans-serif;
 }
+.page {
+    width: 100%;
+}
 
 body::-webkit-scrollbar {
     display: none;
