maybe fixed footer and section size

--- a/Frontend/charts/src/index.css
+++ b/Frontend/charts/src/index.css
@@ -123,6 +123,7 @@ body::-webkit-scrollbar {
     border: 0.1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 10px 15px rgba(0, 0, 0, 0.2);
     margin-top: 5%;
+    min-width: 85vh !important;
 }
 
 /* MAPS END */
@@ -231,6 +232,7 @@ section .section-title {
 }
 
 #footer {
+    min-width: 180vh !important;
     border-top: rgba(0, 0, 0, 0.2);
     width: 100%;
     color: #ffffff;
