--- a/Frontend/charts/src/index.css
+++ b/Frontend/charts/src/index.css
@@ -162,12 +162,16 @@ body::-webkit-scrollbar {
 }
 
 #opioid-bar-chart {
-    width: 90vw;
+    display: inline-block;
+    width: 70vw;
 }
 
 #opioid-bar-chart-year-acc{
-    width: 90vw;
+    display: inline-block;
+    width: 10vw;
 }
+
+
 
 /* CHARTS END */
 
@@ -180,6 +184,12 @@ body::-webkit-scrollbar {
 
 
 /* BUTTONS */
+
+
+.barchart-year-btn  {
+    margin-right: 0.1%;
+    font-size: 35px !important;
+}
 
 .material-icons.md-36 {
     font-size: 36px;
