--- a/Frontend/charts/src/index.css
+++ b/Frontend/charts/src/index.css
@@ -70,7 +70,7 @@ ul {
     font-family: 'Baskervville', serif;
     font-weight: 1000;
     width: 50%;
-    margin-left: 23%;
+    margin-left: 24%;
  
 }
 
@@ -146,17 +146,14 @@ ul {
 
 
 .information {
-    margin-left: 10%;
-    font-size: 1vw;
+    margin-left: 30%;
+    font-size: .9vw;
     padding: 2%;
-    width: 80%;
+    width: 40%;
 }
 
 .map-container {
-    border: 0.1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 10px 15px rgba(0, 0, 0, 0.2);
     margin-top: 5%;
-    min-width: 83vh !important;
 }
 
 /* MAPS END */
@@ -170,6 +167,10 @@ ul {
 
 
 /* CHARTS */
+
+#opioid-bar-chart {
+    margin-left: 11% !important
+}
 
 #scatter-correlogram-container {
     display: inline-block;
@@ -215,9 +216,7 @@ svg {
     padding-bottom: 1%;
     display: inline-block;
     margin-top: 8%;
-    min-width: 89vw !important;
-    border: 0.1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 10px 15px rgba(0, 0, 0, 0.2);
+    min-width: 100%!important;
 }
 
 #opioid-bar-chart {
