--- a/Frontend/charts/src/index.css
+++ b/Frontend/charts/src/index.css
@@ -18,6 +18,34 @@ body::-webkit-scrollbar {
     margin-top: 12%;
     width: 100%;
 }
+
+.section-separator{
+    margin-top: 5%;
+    margin-bottom: 5%;
+    border-bottom: 5px solid black;
+    width: 40%;
+    margin-left: 30%;
+    position: relative;
+}
+
+.section-separator-line{
+    display: inline-block;
+    width: 30%;
+    border-bottom: 10px solid black;
+}
+
+#section-separator-dot{
+    width: 185px;
+    height: 150px;
+    top: 15%;
+    left: 570px;
+    position: absolute;
+    display: inline-block;
+    font-size: 20vw;
+    font-weight: 1000;
+
+
+}
 /* GENERAL END */
 
 
@@ -203,7 +231,7 @@ svg {
 
 .charts-container{
     display: inline-block;
-    margin-top: 8%;
+    margin-top: 0%;
 }
 
 .scatter-container {
