--- a/Frontend/charts/src/index.css
+++ b/Frontend/charts/src/index.css
@@ -20,9 +20,9 @@ body::-webkit-scrollbar {
 }
 
 .section-separator{
-    margin-top: 5%;
-    margin-bottom: 5%;
-    border-bottom: 5px solid black;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.2) !important; 
     width: 40%;
     margin-left: 30%;
     position: relative;
@@ -181,7 +181,7 @@ ul {
 }
 
 .map-container {
-    margin-top: 5%;
+    margin-top: 1%;
 }
 
 /* MAPS END */
@@ -225,7 +225,7 @@ svg {
   }
 
   .cluster-plot-container {
-      margin-top: 8%;
+      margin-top: 1%;
   }
 
 
@@ -243,7 +243,7 @@ svg {
 .chart-container {
     padding-bottom: 1%;
     display: inline-block;
-    margin-top: 8%;
+    margin-top: 0.1%;
     min-width: 100%!important;
 }
 
